# noverby

./: .commitlintrc.yml  .envrc  .gitignore  .rumdl.toml  Cargo.toml  LICENSE  README.md  biome.json  flake.nix  formatters.nix  justfile  kgen.trace.json.time-events.txt  kgen.trace.json.time-trace  lychee.toml  typos.toml
h264-decoder-rs/crates/h264-decode-cli/: Cargo.toml
h264toav1-rs/: Cargo.toml  README.md  default.nix  justfile
h264toav1-rs/src/: ivf.rs  main.rs
h265-decoder-rs/: Cargo.toml
h265-decoder-rs/crates/h265-decode/: Cargo.toml
ironclaw/contacts/: Cargo.toml  contacts.capabilities.json  default.nix
ironclaw/contacts/src/: lib.rs
ironclaw/mail/: Cargo.toml  default.nix  mail.capabilities.json
ironclaw/mail/src/: lib.rs
ironclaw/pixtral/: Cargo.toml  default.nix  pixtral-tool.capabilities.json
ironclaw/pixtral/src/: lib.rs
nix-workspace/cli/: Cargo.toml
nix-workspace/cli/src/: diagnostics.rs  flake_gen.rs  main.rs
nu-plugin-tramp/: Cargo.toml  PLAN.md  README.md  cross.nix  default.nix  hm-module.nix
nu-plugin-tramp/crates/agent/: Cargo.toml
nu-plugin-tramp/crates/plugin/: Cargo.toml
nu-plugin-tramp/src/: errors.rs  main.rs  vfs.rs
nu-plugin-tramp/src/backend/: exec.rs  mod.rs  runner.rs  ssh.rs
pkg-config-rs/: Cargo.toml  PLAN.md  README.md  default.nix  justfile  setup-hook.sh
pkg-config-rs/crates/libpkgconf/: Cargo.toml
pkg-config-rs/crates/pkgconf/: Cargo.toml
pkg-config-rs/tests/: differential.nu  differential.sh
pkg-config-rs/tests/data/: circular-1.pc  circular-2.pc  comments.pc  conflicting.pc  depender.pc  diamond-a.pc  diamond-b.pc  diamond-c.pc  diamond-d.pc  dos-lineendings.pc  flag-order-1.pc  framework.pc  libbar.pc  libfoo.pc  missing-require.pc  multiline.pc  needs-provider.pc  nocflags.pc  private-deps.pc  provider.pc  static-libs.pc  sysroot-test.pc  tilde-version.pc  unicode.pc  variables-only.pc  zlib.pc
projects/rustysd/: Cargo.toml  default.nix  feature-comparison.md
projects/rustysd/src/: config.rs  fd_store.rs  lib.rs  logging.rs  notification_handler.rs  runtime_info.rs  shutdown.rs  signal_handler.rs  socket_activation.rs
projects/rustysd/tools/: gen_feature_comparison.py
rust/bash/: .commitmsg  .deslop.toml  CHANGELOG.md  COMMIT_MSG  Cargo.toml  PLAN.md  README.md  default.nix  foo  testsuite.nix
rust/bash/src/: ast.rs  builtins.rs  expand.rs  interpreter.rs  lexer.rs  main.rs  parser.rs
rust/binutils/: Cargo.toml  default.nix
rust/binutils/src/: main.rs
rust/cachix/: Cargo.toml  default.nix
rust/cachix/src/: main.rs
rust/curl/: Cargo.toml  default.nix
rust/curl/src/: main.rs
rust/direnv/: Cargo.toml  default.nix
rust/direnv/src/: config.rs  dotenv.rs  env.rs  env_diff.rs  escape.rs  file_times.rs  gzenv.rs  log.rs  main.rs  rc.rs
rust/flatpak/: .deslop.toml  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  default.nix  testsuite.nix  vmtest.nix
rust/flatpak/src/: build.rs  dbus_client.rs  dbus_proxy.rs  deltas.rs  extensions.rs  gvariant.rs  installation.rs  instance.rs  main.rs  metadata.rs  ostree.rs  portals.rs  sandbox.rs  seccomp.rs
rust/flatpak/tests/: build-bundle-basic.sh  build-bundle-missing-args.sh  build-bundle-roundtrip.sh  build-commit-from-missing-args.sh  build-export-branch.sh  build-export-creates-repo.sh  build-export-multiple-apps.sh  build-export-no-dir.sh  build-export-subject.sh  build-finish-command.sh  build-finish-export-dbus.sh  build-finish-export-desktop.sh  build-finish-export-icons.sh  build-finish-export-metainfo.sh  build-finish-idempotent.sh  build-finish-no-dir.sh  build-finish-permissions.sh  build-finish-require-version.sh  build-import-bundle-missing-args.sh  build-init-custom-branch.sh  build-init-dirs.sh  build-init-extension.sh  build-init-metadata-format.sh  build-init-missing-args.sh  build-init-no-extra-files.sh  build-init.sh  build-missing-args.sh  build-sign-missing-args.sh  build-update-repo-creates-summary.sh  build-update-repo-default-branch.sh  build-update-repo-missing-args.sh  build-update-repo-redirect.sh  build-update-repo-title.sh  build-update-repo.sh  complete-lists-commands.sh  config-list.sh  config-set-get.sh  config-unset.sh  config-user-path.sh  config-user.sh  (+102 more)
rust/flatpak/vmtests/: libtest-nix.sh  vm-build-update-repo-default-branch.sh  vm-build-update-repo-redirect.sh  vm-build-update-repo-title.sh  vm-bundle-create.sh  vm-bundle-install.sh  vm-bundle-runtime.sh  vm-bundle-update-as-bundle.sh  vm-bundle-update.sh  vm-completion.sh  vm-config-languages-star.sh  vm-config-set-get.sh  vm-config-unset.sh  vm-dbus-proxy-session.sh  vm-dbus-proxy-system.sh  vm-document-export.sh  vm-document-info.sh  vm-document-unexport.sh  (+56 more)
rust/gcc/: Cargo.toml  README.md  default.nix
rust/grep/: .deslop.toml  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  default.nix  testsuite.nix
rust/gzip/: .deslop.toml  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  default.nix  testsuite.nix
rust/h264-decoder/: Cargo.toml  README.md  default.nix  justfile
rust/h264toav1/: Cargo.toml  README.md  default.nix
rust/ironclaw-matrix/: Cargo.toml  default.nix  matrix.capabilities.json
rust/meson/: .deslop.toml  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  default.nix  hello-world-test.nix  testsuite.nix
rust/pcre2/: CHANGELOG.md  Cargo.toml  PLAN.md  README.md  default.nix
rust/xz/: CHANGELOG.md  Cargo.toml  README.md  default.nix  testsuite.nix
systemd-rs/: CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md  Readme.md  build_all.sh  default.nix  feature-comparison.md  justfile
systemd-rs/doc/: SocketHandling.md
systemd-rs/src/: config.rs  lib.rs  logging.rs  notification_handler.rs  socket_activation.rs
systemd-rs/test_scenario/: run_scenario.sh
systemd-rs/test_units/: tmp.mount
tangled/cli/: .pre-commit-config.yaml  AGENTS.md  Cargo.toml  PLAN.md  README.md  default.nix
tangled/spindle-nix-engine/: Cargo.toml  default.nix  nixos-module.nix  nixos-test.nix
web/homepage-dioxus/: Cargo.toml  Dioxus.toml  PLAN.md  default.nix  justfile
web/wiki-dioxus/: Cargo.toml  Dioxus.toml  PLAN.md  default.nix  justfile
(+3410 files in other folders)
