[workspace]
members = ["crates/h265-decode"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://tangled.org/overby.me/overby.me/tree/main/h265-decoder-rs"
description = "A pure Rust H.265/HEVC decoder library"

[workspace.dependencies]
h265-decode = { path = "crates/h265-decode" }
log = "0.4"
thiserror = "2"
