[workspace]
resolver = "2"
members = ["crates/plugin", "crates/agent"]

# Share common settings across workspace members
[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://tangled.org/overby.me/overby.me/tree/main/nu-plugin-tramp"

[workspace.dependencies]
# Async runtime (shared by plugin and agent)
tokio = { version = "1", features = ["full"] }

# Serialization (used by agent, and later by plugin's RPC client)
serde = { version = "1", features = ["derive"] }
rmp-serde = "1.3"
rmpv = { version = "1.3", features = ["with-serde"] }

# Error handling
thiserror = "2"

# Byte buffers
bytes = "1"

# Optimized release profile for the agent binary (minimal size ~1 MB)
[profile.release-agent]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
