[workspace]
members = [
    "crates/libsystemd",
    "crates/systemd",
    "crates/systemctl",
    "crates/id128",
    "crates/escape",
    "crates/notify",
    "crates/path",
    "crates/cat",
    "crates/detect-virt",
    "crates/delta",
    "crates/run",
    "crates/ac-power",
    "crates/journald",
    "crates/journalctl",
    "crates/shutdown",
    "crates/sleep",
]
resolver = "2"
