[workspace]
members = [
    "crates/libsystemd",
    "crates/systemd",
    "crates/systemctl",
    "crates/id128",
    "crates/escape",
    "crates/notify",
    "crates/path",
    "crates/cat",
    "crates/detect-virt",
    "crates/delta",
    "crates/run",
    "crates/ac-power",
    "crates/journald",
    "crates/journalctl",
    "crates/shutdown",
    "crates/sleep",
    "crates/modules-load",
    "crates/sysctl",
    "crates/binfmt",
    "crates/vconsole-setup",
    "crates/backlight",
    "crates/rfkill",
    "crates/tmpfiles",
    "crates/sysusers",
    "crates/oomd",
    "crates/oomctl",
    "crates/timesyncd",
    "crates/timedatectl",
    "crates/user-sessions",
    "crates/update-done",
    "crates/random-seed",
    "crates/pstore",
    "crates/machine-id-setup",
    "crates/hostnamed",
    "crates/hostnamectl",
    "crates/localed",
    "crates/localectl",
    "crates/analyze",
    "crates/cgls",
    "crates/cgtop",
    "crates/inhibit",
    "crates/mount",
    "crates/ask-password",
    "crates/tty-ask-password-agent",
    "crates/socket-activate",
    "crates/logind",
    "crates/loginctl",
    "crates/networkd",
    "crates/networkctl",
    "crates/resolved",
    "crates/resolvectl",
    "crates/creds",
]
resolver = "2"
