[package]
name = "mail-channel"
version = "0.1.0"
edition = "2021"
description = "Email channel for IronClaw AI assistant via JMAP"
license = "MIT"
repository = "https://tangled.org/overby.me/overby.me/tree/main/ironclaw/mail"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
