[package]
name = "rustysd"
version = "0.1.0"
authors = ["Moritz Borcherding <moritz.borcherding@web.de>"]
edition = "2018"

[dependencies]
signal-hook = "0.4"
libc = "0.2"
nix = { version = "0.31", features = ["user", "process", "mount", "poll", "fs", "signal", "socket", "event"] }
log = "0.4"
fern = "0.7"
chrono = "0.4"
threadpool = "1.8"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }

dbus = {version = "0.9", optional = true}
shlex = "1.3"
clap = { version = "4.5", features = ["derive"] }
shmemfdrs = "0.1"
which = "8.0"

[features]
dbus_support = ["dbus"]
linux_eventfd = []
cgroups = []
