[package]
name = "rust-bash"
version = "0.1.0"
edition = "2024"
description = "A Bash-compatible shell written in Rust"
license = "MIT"

[[bin]]
name = "bash"
path = "src/main.rs"

[dependencies]
nix = { version = "0.29", features = ["fs", "poll", "process", "signal"] }
glob = "0.3"
libc = "0.2"
regex-lite = "0.1"

[profile.release]
lto = true
strip = true
