[package]
name = "rust-direnv"
version = "2.36.0"
edition = "2024"
description = "A Rust rewrite of direnv - unclutter your .profile"
license = "MIT"

[[bin]]
name = "direnv"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
filetime = "0.2"
flate2 = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
ureq = "3"
which = "7"

[profile.release]
lto = true
strip = true
