[package]
name = "rust-flatpak"
version = "0.1.0"
edition = "2024"
description = "A Flatpak-compatible application sandboxing and distribution tool written in Rust"
license = "MIT"

[[bin]]
name = "flatpak"
path = "src/main.rs"

[dependencies]
libc = "0.2"

[profile.release]
lto = true
strip = true
