[workspace]
members = ["crates/h264-decode", "crates/h264-decode-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://tangled.org/overby.me/overby.me/tree/main/rust/h264-decoder"
description = "A pure Rust H.264 decoder library"

[workspace.dependencies]
h264-decode = { path = "crates/h264-decode" }
h264-reader = "0.8"
log = "0.4"
thiserror = "2"
