[package]
name = "rust-meson"
version = "0.1.0"
edition = "2024"
description = "A Meson build system compatible implementation in Rust"
license = "MIT"

[[bin]]
name = "meson"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
glob = "0.3"
regex-lite = "0.1"
sha2 = "0.10"

[profile.release]
lto = true
strip = true
