[package]
name = "rust-xz"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "rust_xz"
path = "src/lib.rs"

[[bin]]
name = "xz"
path = "src/main.rs"

[[bench]]
name = "roundtrip"
harness = false

[dependencies]
liblzma = "0.4"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", default-features = false }

[profile.release]
lto = true
strip = true
