[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
# AT Protocol
atrium-api = "0.24"
atrium-xrpc-client = "0.5"
atrium-identity = "0.1"
atrium-oauth = "0.1"

# CLI
clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4.5"

# Async
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# HTTP & Serialization
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Git
git2 = "0.19"
git2-credentials = "0.13"

# Terminal UI
indicatif = "0.17"
colored = "2.1"
tabled = "0.16"
dialoguer = "0.11"
console = "0.15"

# Storage
dirs = "5.0"
keyring = { version = "3.6", features = ["sync-secret-service", "vendored"] }

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
base64 = "0.22"
regex = "1.10"

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Testing
mockito = "1.4"
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
