[workspace]
resolver = "2"
members = [
  "crates/tangled-spindle",
  "crates/spindle-run",
  "crates/spindle-engine",
  "crates/spindle-jetstream",
  "crates/spindle-knot",
  "crates/spindle-db",
  "crates/spindle-rbac",
  "crates/spindle-secrets",
  "crates/spindle-queue",
  "crates/spindle-models",
  "crates/spindle-xrpc",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://tangled.org/overby.me/overby.me/tree/main/nix-tangled-spindle"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / WebSocket
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls-webpki-roots",
] }

# Database
rusqlite = { version = "0.34", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# RBAC
casbin = "2"

# Filesystem watching
notify = "7"

# Crypto / encoding
aes-gcm = "0.10"
base64 = "0.22"
bs58 = "0.5"
k256 = { version = "0.13", features = ["ecdsa"] }
p256 = { version = "0.13", features = ["ecdsa"] }
ring = "0.17"

# Utilities
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tokio-util = { version = "0.7", features = ["rt"] }

# Testing
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

# Workspace crates
spindle-models = { path = "crates/spindle-models" }
spindle-engine = { path = "crates/spindle-engine" }
spindle-jetstream = { path = "crates/spindle-jetstream" }
spindle-knot = { path = "crates/spindle-knot" }
spindle-db = { path = "crates/spindle-db" }
spindle-rbac = { path = "crates/spindle-rbac" }
spindle-secrets = { path = "crates/spindle-secrets" }
spindle-queue = { path = "crates/spindle-queue" }
spindle-xrpc = { path = "crates/spindle-xrpc" }
