[package]
name = "homepage-dioxus"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["web", "router"] }
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "WebGlRenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlBuffer",
  "WebGlTexture",
  "WebGlUniformLocation",
  "MouseEvent",
  "HtmlImageElement",
  "Performance",
  "Url",
  "UrlSearchParams",
  "Location",
  "console",
  "Element",
  "HtmlElement",
  "CssStyleDeclaration",
  "DomRect",
  "WebGlContextAttributes",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
glam = "0.29"
log = "0.4"
wasm-logger = "0.2"

[profile.release]
opt-level = "z"
lto = true
